Add ping healcheck

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Phu Quoc Dog</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>Phu Quoc Dog</h1>
+  <p>Better storage. Better transfers. Better internet on Phu Quoc Network</p>
 </body>
 
 </html>
